# storekeeper

./: .beans.yml  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  clippy.toml  config.example.toml  justfile  secrets.example.toml
.claude/: settings.local.json
.claude/rules/github-actions/: github-actions-versioning.md
.claude/rules/rust/: rust-code-quality.md  rust-defensive-programming.md  rust-dependencies.md  rust-documentation.md  rust-performance.md  rust-workspaces.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yaml  frontend-lint.yaml  lint.yaml  rust-lint.yaml  rust-test.yaml
docs/: README.md
docs/architecture/: 01-overview.md  02-directory-structure.md  03-core-components.md  04-data-flow.md
docs/onboarding/: 01-setup.md  02-first-contribution.md
docs/standards/frontend/: frontend-accessibility.md  frontend-atoms.md  frontend-components.md  frontend-dependencies.md  frontend-file-naming.md  frontend-forms.md  frontend-i18n.md  frontend-linting.md  frontend-performance.md  frontend-queries.md  frontend-react-aria.md  frontend-routing.md  frontend-styling.md  frontend-tauri-bridge.md  frontend-testing.md  frontend-types.md
docs/standards/rust/: rust-api-design.md  rust-code-quality.md  rust-defensive-programming.md  rust-dependencies.md  rust-documentation.md  rust-error-handling.md  rust-linting.md  rust-performance.md  rust-testing.md  rust-unsafe.md  rust-workspaces.md
frontend/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmpclaude-a8e9-cwd  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/messages/: en.json
frontend/project.inlang/: settings.json
frontend/src/: App.tsx  index.css  index.tsx  router.tsx  styles.css  types.ts
frontend/src/components/: GameSection.tsx  ResourceCard.tsx
frontend/src/components/app/: CooldownCard.tsx  ExpeditionCard.tsx  StaminaCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Select.tsx  index.ts
frontend/src/components/utils/: styles.ts
frontend/src/modules/: atoms.ts
frontend/src/modules/core/: core.atoms.ts  core.config.ts  core.queryClient.ts  core.tick.ts
frontend/src/modules/games/: atomFormattedTime.ts  atomResourceSelector.ts  games.atoms.ts  games.constants.ts  games.types.ts
frontend/src/modules/games/genshin/: genshin.atoms.ts
frontend/src/modules/games/genshin/components/: ExpeditionsCard.tsx  GenshinSection.tsx  ParametricTransformerCard.tsx  RealmCurrencyCard.tsx  ResinCard.tsx
frontend/src/modules/games/hsr/: hsr.atoms.ts
frontend/src/modules/games/hsr/components/: HsrSection.tsx  TrailblazePowerCard.tsx
frontend/src/modules/games/wuwa/: wuwa.atoms.ts
frontend/src/modules/games/wuwa/components/: WaveplatesCard.tsx  WuwaSection.tsx
frontend/src/modules/games/zzz/: zzz.atoms.ts
frontend/src/modules/games/zzz/components/: BatteryCard.tsx  ZzzSection.tsx
frontend/src/modules/i18n/: locale-names.ts
frontend/src/modules/resources/: resources.atoms.ts  resources.hooks.ts  resources.icons.ts  resources.query.ts  resources.types.ts  resources.utils.test.ts  resources.utils.ts
frontend/src/modules/resources/components/: CooldownCard.tsx  ExpeditionCard.tsx  GameSection.tsx  ResourceCard.tsx  ResourceIcon.tsx  StaminaCard.tsx  TimeRemaining.tsx
frontend/src/modules/settings/: settings.atoms.ts  settings.query.ts  settings.types.ts
frontend/src/modules/settings/components/: GeneralSection.tsx  HoyolabGameSection.tsx  HoyolabSecretsSection.tsx  KuroSecretsSection.tsx  NotificationResourceRow.tsx  NotificationSection.tsx  Section.tsx  WuwaSection.tsx
frontend/src/modules/ui/: ui.animations.ts  ui.styles.ts
frontend/src/modules/ui/components/: Badge.tsx  Button.tsx  ButtonLink.tsx  Checkbox.tsx  CheckboxGroup.tsx  Field.tsx  GameSection.tsx  GameSectionWrapper.tsx  IconPlaceholder.tsx  Input.tsx  Link.tsx  NumberField.tsx  ProgressBar.tsx  SegmentedControl.tsx  Select.tsx  Switch.tsx  TextField.tsx  Textarea.tsx  Tooltip.tsx
frontend/src/routes/: __root.tsx  index.tsx  settings.tsx
frontend/src/store/: atoms.ts
frontend/src/types/: intl.d.ts
frontend/src/utils/: resourceFormatting.ts
locales/: en.json  ja.json  ko.json  zh-CN.json
storekeeper-app-tauri/: Cargo.toml  build.rs  tauri.conf.json
storekeeper-app-tauri/capabilities/: default.json
storekeeper-app-tauri/icons/: icon.icns
storekeeper-app-tauri/src/: clients.rs  commands.rs  config_diff.rs  daily_reward_registry.rs  error.rs  events.rs  i18n.rs  lib.rs  main.rs  notification.rs  polling.rs  provider_batch.rs  registry.rs  retry_helpers.rs  scheduled_claim.rs  state.rs  tray.rs
storekeeper-app-tauri/src/i18n/: format.rs  locale.rs  parser.rs  store.rs
storekeeper-app-tauri/src/notification/: checker.rs  message_builder.rs  mod.rs  resource_extractor.rs  tracker.rs
storekeeper-client-core/: Cargo.toml
storekeeper-client-core/src/: client.rs  error.rs  lib.rs  response.rs  retry.rs
storekeeper-client-hoyolab/: Cargo.toml
storekeeper-client-hoyolab/src/: client.rs  daily_reward.rs  ds.rs  error.rs  lib.rs
storekeeper-client-kuro/: Cargo.toml
storekeeper-client-kuro/src/: cache.rs  client.rs  error.rs  lib.rs
storekeeper-core/: Cargo.toml
storekeeper-core/src/: config.rs  daily_reward.rs  error.rs  game.rs  game_id.rs  lib.rs  macros.rs  region.rs  resource.rs  resource_types.rs  serde_utils.rs
storekeeper-core/src/config/: claim_time.rs  games.rs  mod.rs  notification.rs  secrets.rs
storekeeper-game-genshin/: Cargo.toml
storekeeper-game-genshin/src/: client.rs  error.rs  lib.rs  resource.rs
storekeeper-game-hsr/: Cargo.toml
storekeeper-game-hsr/src/: client.rs  error.rs  lib.rs  resource.rs
storekeeper-game-wuwa/: Cargo.toml
storekeeper-game-wuwa/src/: client.rs  error.rs  lib.rs  resource.rs
storekeeper-game-zzz/: Cargo.toml
storekeeper-game-zzz/src/: client.rs  error.rs  lib.rs  resource.rs
