[workspace]
members = [
    "storekeeper-core",
    "storekeeper-client-core",
    "storekeeper-client-hoyolab",
    "storekeeper-client-kuro",
    "storekeeper-game-genshin",
    "storekeeper-game-hsr",
    "storekeeper-game-zzz",
    "storekeeper-game-wuwa",
    "storekeeper-app-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kvnxiao/storekeeper"
authors = ["Kevin Xiao"]

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP & serialization
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "charset", "http2", "system-proxy", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Time & utilities
jiff = { version = "0.2", features = ["serde"] }
dirs = "6"

# Filesystem IO (errors carry path context)
fs-err = "3"

# UTF-8 paths
camino = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.10"

# Crypto
md-5 = "0.11"

# Internationalization (ICU4X) — pinned to rev that includes re-export fix (PR #7616)
icu_locale = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }
icu_plurals = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }
icu_calendar = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }
icu_datetime = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }
icu_experimental = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }
icu_time = { git = "https://github.com/unicode-org/icu4x", rev = "bd6b9179" }

# System locale detection
sys-locale = "0.3"

# Enum utilities
strum = { version = "0.28", features = ["derive"] }

# Async utilities (for join_all)
futures = "0.3"

# HTTP middleware and retry
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"

# Random number generation (for jitter)
rand = "0.10"

# Workspace crates (for inter-crate dependencies)
storekeeper-core = { path = "storekeeper-core", version = "0.1.0" }
storekeeper-client-core = { path = "storekeeper-client-core", version = "0.1.0" }
storekeeper-client-hoyolab = { path = "storekeeper-client-hoyolab", version = "0.1.0" }
storekeeper-client-kuro = { path = "storekeeper-client-kuro", version = "0.1.0" }
storekeeper-game-genshin = { path = "storekeeper-game-genshin", version = "0.1.0" }
storekeeper-game-hsr = { path = "storekeeper-game-hsr", version = "0.1.0" }
storekeeper-game-zzz = { path = "storekeeper-game-zzz", version = "0.1.0" }
storekeeper-game-wuwa = { path = "storekeeper-game-wuwa", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Cargo group escape hatches
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"   # storekeeper: internal crates omit readme/keywords/categories

# Don't panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
string_slice = "deny"
indexing_slicing = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
unchecked_time_subtraction = "deny"
todo = "warn"
unimplemented = "warn"

# Don't fail silently
let_underscore_future = "deny"
let_underscore_must_use = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"

# Async correctness
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
if_let_mutex = "deny"
large_futures = "deny"

# Unsafe hygiene
mem_forget = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unnecessary_safety_doc = "deny"
unnecessary_safety_comment = "deny"

# Float correctness
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
invalid_upcast_comparisons = "deny"

# Misc footguns
rc_mutex = "deny"
debug_assert_with_mut_call = "deny"
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
dbg_macro = "deny"

# Casts (storekeeper-specific, stricter than speccy)
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"

# Force #[expect(..., reason = "...")] over silent #[allow]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Performance
inefficient_to_string = "deny"   # storekeeper-specific
large_enum_variant = "warn"
large_stack_arrays = "deny"
needless_pass_by_value = "warn"

# Style
missing_errors_doc = "warn"
missing_panics_doc = "warn"
doc_markdown = "allow"           # storekeeper: HoYoLab / game terms aren't backtick-quoted

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
debug = true
