[package]
name = "storekeeper-client-core"
version = "0.1.0"
description = "Shared HTTP client abstractions for Storekeeper API clients"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
