[package]
name = "storekeeper-client-hoyolab"
version = "0.1.0"
description = "HoYoLab API client for Storekeeper"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storekeeper-core.workspace = true
storekeeper-client-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
governor.workspace = true
md-5.workspace = true
tracing.workspace = true
rand.workspace = true

[lints]
workspace = true
