[package]
name = "storekeeper-core"
version = "0.1.0"
description = "Core traits, types, and configuration for Storekeeper"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
jiff.workspace = true
dirs.workspace = true
fs-err.workspace = true
camino.workspace = true
thiserror.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
